fix: resolve merge conflicts and refactor methods into managers