@@ -1,4 +1,4 @@
-package org.pdflite.controller;
+package org.pdflite.manager;
 
 import javafx.application.Platform;
 import javafx.scene.Node;
@@ -7,6 +7,7 @@ import javafx.scene.image.ImageView;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
+import org.pdflite.controller.MainController;
 import org.pdflite.model.PDFDocument;
 import org.pdflite.model.SearchResult;
 import org.pdflite.view.AnnotationLayer;
@@ -72,7 +73,7 @@ public class SearchManager {
     public void togglePanel(SearchPanelPosition position) {
         this.searchPanelPosition = position;
 
-        if (searchPanelVisible && this.searchPanelPosition == position) {
+        if (searchPanelVisible) {
             hidePanel();
         } else {
             showPanel(position);
@@ -91,13 +92,11 @@ public class SearchManager {
 
         logger.info("Loading {} pages with search results...", resultsByPage.size());
 
-        loadPagesWithResults(new ArrayList<>(resultsByPage.keySet()), () -> {
-            Platform.runLater(() -> {
-                updateAllHighlights();
-                logger.info("Highlighted {} search results across {} pages",
-                        results.size(), resultsByPage.size());
-            });
-        });
+        loadPagesWithResults(new ArrayList<>(resultsByPage.keySet()), () -> Platform.runLater(() -> {
+            updateAllHighlights();
+            logger.info("Highlighted {} search results across {} pages",
+                    results.size(), resultsByPage.size());
+        }));
     }
 
     public void navigateToResult(SearchResult result) {
@@ -114,17 +113,15 @@ public class SearchManager {
                 result.getX(), result.getY());
 
         if (pageIndex >= 0 && pageIndex < mainController.getTotalPages()) {
-            navigationHelper.ensurePageLoadedAndReady(pageIndex, () -> {
-                Platform.runLater(() -> {
-                    navigationHelper.navigateToPage(pageIndex);
+            navigationHelper.ensurePageLoadedAndReady(pageIndex, () -> Platform.runLater(() -> {
+                navigationHelper.navigateToPage(pageIndex);
 
-                    // Delay to ensure scroll completes
-                    Platform.runLater(() -> {
-                        updateAllHighlights();
-                        logger.info("Active result updated on page {}", result.getPageNumber());
-                    });
+                // Delay to ensure scroll completes
+                Platform.runLater(() -> {
+                    updateAllHighlights();
+                    logger.info("Active result updated on page {}", result.getPageNumber());
                 });
-            });
+            }));
         }
     }
 
@@ -238,9 +235,7 @@ public class SearchManager {
             loadPagesRecursive(pageIndices, currentIndex + 1, onComplete);
         } else {
             logger.debug("Loading page {} for search highlights", pageIndex + 1);
-            navigationHelper.loadPageAndWait(pageIndex, pageBox, () -> {
-                loadPagesRecursive(pageIndices, currentIndex + 1, onComplete);
-            });
+            navigationHelper.loadPageAndWait(pageIndex, pageBox, () -> loadPagesRecursive(pageIndices, currentIndex + 1, onComplete));
         }
     }
 
@@ -332,7 +327,7 @@ public class SearchManager {
             return null;
         }
 
-        if (pageBox.getChildren().get(0) instanceof StackPane stackPane) {
+        if (pageBox.getChildren().getFirst() instanceof StackPane stackPane) {
             for (Node node : stackPane.getChildren()) {
                 if (node instanceof AnnotationLayer layer) {
                     syncLayerWithImage(stackPane, layer);
@@ -345,7 +340,7 @@ public class SearchManager {
 
     private void syncLayerWithImage(StackPane stackPane, AnnotationLayer layer) {
         if (!stackPane.getChildren().isEmpty()
-                && stackPane.getChildren().get(0) instanceof ImageView imageView) {
+                && stackPane.getChildren().getFirst() instanceof ImageView imageView) {
             Image image = imageView.getImage();
             if (image != null) {
                 double imageWidth = image.getWidth();
